--- a/PreEntrega1+Romero Osmi/contactanos.html
+++ b/PreEntrega1+Romero Osmi/contactanos.html
@@ -49,7 +49,7 @@
         <h1 class="tituloContactanos">Contáctanos</h1>
         <p class="bajada-landings-contactanos">
             Si tienes algún requerimiento especial, o algún requerimiento que tenga que ver con
-            productos adquiridos en Ardillitas, <br>por favor contáctanos por alguna de las siguientes
+            productos adquiridos <br>en Ardillitas, por favor contáctanos por alguna de las siguientes
             opciones: <br>
             EMAIL: ardillitasshop@gmail.com
             <br>
@@ -69,7 +69,7 @@
                 <label class="formulario-contactanos-grupo-label" for="email-usuario">Email</label>
                 <input class="formulario-contactanos-grupo-input" type="email" name="email" id="email-usuario" placeholder="ingrese su email">
             </div>
-            <div class="formulario-contactanos-grupo">
+            <div class="formulario-contactanos-grupo-mensaje">
                 <label class="formulario-contactanos-grupo-label" for="requerimiento">Ingrese su requerimiento</label>
                 <textarea class="formulario-contactanos-grupo-input" name="requerimiento" id="requerimiento"></textarea>
             </div>
