--- a/PreEntrega1+Romero Osmi/contactanos.html
+++ b/PreEntrega1+Romero Osmi/contactanos.html
@@ -49,12 +49,12 @@
         <h1 class="tituloContactanos">Contáctanos</h1>
         <p class="bajada-landings-contactanos">
             Si tienes algún requerimiento especial, o algún requerimiento que tenga que ver con
-            productos adquiridos <br>en Ardillitas, por favor contáctanos por alguna de las siguientes
-            opciones: <br>
+            productos adquiridos en Ardillitas, por favor contáctanos por alguna de las siguientes
+            opciones:
             EMAIL: ardillitasshop@gmail.com
-            <br>
+           
             INSTAGRAM: @ArdillitasShop.cl
-            <br>
+           
             o dejanos tus datos y te contáctaremos a la brevedad posible.
         </p>
 
@@ -92,21 +92,19 @@
 
 
 
+<!--footer-->
+<footer class="footer">
+    <h4>Suscríbete a nuestra lista de email y obtén los mejores descuentos</h4>
+    <form class="formFooter">
+        <div class="formFooter-grupo">
+            <label class="formFooter-label" for="email-usuario">Email</label>
+            <input class="formFooter-input" type="email" name="request" id="" placeholder="ingrese su email">
+        </div>
+    </form>
+    <p class="footerText">Copyright 2024©</p>
 
-    <!--footer-->
-    <footer class="footer">
-        <h4>Suscríbete a nuestra lista de email y obtén los mejores descuentos</h4>
-        <form class="formFooter" action="">
-            <div>
-                <label for="email-usuario">Email</label>
-                <input type="email" name="request" id="" placeholder="ingrese su email">
-            </div>
-        </form>
-        <p class="footerText">Copyright 2024©</p>
-
-    </footer>
-    <!--footer-->
-
+</footer>
+<!--footer-->
 
 
 
