--- a/PreEntrega1+Romero Osmi/enviosypedidos.html
+++ b/PreEntrega1+Romero Osmi/enviosypedidos.html
@@ -76,19 +76,19 @@
 
 
 
-    <!--footer-->
-    <footer class="footer">
-        <h4>Suscríbete a nuestra lista de email y obtén los mejores descuentos</h4>
-        <form class="formFooter" action="">
-            <div>
-                <label for="email-usuario">Email</label>
-                <input type="email" name="request" id="" placeholder="ingrese su email">
-            </div>
-        </form>
-        <p class="footerText">Copyright 2024©</p>
+<!--footer-->
+<footer class="footer">
+    <h4>Suscríbete a nuestra lista de email y obtén los mejores descuentos</h4>
+    <form class="formFooter">
+        <div class="formFooter-grupo">
+            <label class="formFooter-label" for="email-usuario">Email</label>
+            <input class="formFooter-input" type="email" name="request" id="" placeholder="ingrese su email">
+        </div>
+    </form>
+    <p class="footerText">Copyright 2024©</p>
 
-    </footer>
-    <!--footer-->
+</footer>
+<!--footer-->
 
 </body>
 
