--- a/contactanos.html
+++ b/contactanos.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¿Tienes alguna pregunta o comentario sobre nuestros lazos para niñas y bebés? ¡Estamos aquí para ayudarte! Contacta con nuestro equipo amigable y profesional 
+    hoy mismo para obtener asistencia personalizada y resolver tus dudas.">
     <link rel="shortcut icon" href="./img/ARDILLITAS PNG (1).png" type="image/x-icon">
     <!--CSS-->
     <link rel="stylesheet" href="./style.css">
     <!--fin CSS-->
-    <title>Ardillitas Shop</title>
+    <title>Ardillitas Shop - Contactanos</title>
 </head>
 
 <body>
