--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encuentra lazos encantadores y delicados para niñas y bebés en nuestra tienda en línea. Desde estilos clásicos hasta diseños modernos, tenemos el complemento perfecto 
+    para cada ocasión. ¡Explora nuestra colección ahora!">
     <link rel="shortcut icon" href="./img/ARDILLITAS PNG (1).png" type="image/x-icon">
     <!--CSS-->
     <link rel="stylesheet" href="./style.css">
