--- a/nosotros.html
+++ b/nosotros.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¿Curioso acerca de quiénes somos y qué nos impulsa? En nuestra página 'Nosotros', te invitamos a conocer nuestra historia, nuestros valores y nuestro compromiso con la excelencia. Descubre cómo nos esforzamos 
+    por superar las expectativas de nuestros clientes y cómo podemos hacer tu experiencia de compra más especial.">
     <link rel="shortcut icon" href="./img/ARDILLITAS PNG (1).png" type="image/x-icon">
     <!--CSS-->
     <link rel="stylesheet" href="./style.css">
     <!--fin CSS-->
-    <title>Ardillitas Shop</title>
+    <title>Ardillitas Shop -Nosotros</title>
 </head>
 
 <body>
