--- a/enviosypedidos.html
+++ b/enviosypedidos.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¿Listo para recibir tus lazos favoritos en la puerta de tu hogar? Descubre nuestra conveniente opción de envío y pedidos. 
+    ¡Haz tu pedido ahora y deja que nos encarguemos del resto! Compra con confianza y comodidad.">
     <link rel="shortcut icon" href="./img/ARDILLITAS PNG (1).png" type="image/x-icon">
     <!--CSS-->
     <link rel="stylesheet" href="./style.css">
     <!--fin CSS-->
-    <title>Ardillitas Shop</title>
+    <title>Ardillitas Shop - envios y pedidos</title>
 </head>
 
 <body>
