--- a/enviosypedidos.html
+++ b/enviosypedidos.html
@@ -14,8 +14,6 @@
 </head>
 
 <body>
-
-
     <!--Navegacion-->
     <div class="textoHeader">
         <p class="titulo-linea-1">Lazos hechos a mano con mucho Amor</p>
@@ -26,7 +24,7 @@
             <li class="navegador-link"><a href="./nosotros.html">Nosotros</a></li>
         </ul>
         <div class="redes1">
-            <a href="https://www.instagram.com/ardillitas.cl/"><img class="redes" src="./img/instagram.png"
+            <a target="_blank" href="https://www.instagram.com/ardillitas.cl/"><img class="redes" src="./img/ins.png"
                     alt="Instagram"></a>
         </div>
     </nav>
